--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,6 @@
 <meta charset="utf-8" />
 <title>JavaScript console - for debugging JavaScript and remote debugging mobile web apps</title>
 <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
-<script src="/cheat.js"></script>
+<script src="/cheat.js?1324qrq34rq23"></script>
 </body>
 </html>
